# LegendaryCompanions

./: .gitignore  LICENSE  README.md  info.json
tools/CompanionGenerator/: README.md  pyproject.toml
tools/CompanionGenerator/companiongenerator/: __init__.py  ai_archetypes.py  automation_director.py  automation_state_handler.py  book_loca_aggregator.py  book_loca_entry.py  book_parser.py  character.py  character_aggregator.py  character_mindflayer.py  character_parser.py  constants.py  equipment_parser.py  equipment_set.py  equipment_set_aggregator.py  equipment_set_parser.py  file_handler.py  file_resetter.py  file_templates.py  item_combo.py  item_combo_aggregator.py  item_combo_parser.py  item_combos_parser.py  loca_helper.py  localization_aggregator.py  localization_entry.py  localization_manager.py  localization_parser.py  log_message.py  log_message_aggregator.py  logger.py  replica_files.py  root_template.py  root_template_aggregator.py  root_template_node_entry.py  root_template_parser.py  skill.py  spell.py  spell_aggregator.py  spell_parser.py  (+8 more)
tools/CompanionGenerator/tests/: mock_template_fetcher.py  rt_test_helper.py  template_validity_helper.py  test_automation_director.py  test_book_aggregator.py  test_book_loca.py  test_book_localization.py  test_character_aggregator.py  test_character_parser.py  test_equipment_parser.py  test_file_handler.py  test_file_resetter.py  test_generate_spell.py  test_item_combo_aggregator.py  test_item_combo_parser.py  test_item_combos.py  test_item_combos_parser.py  test_localization_aggregator.py  test_localization_entry.py  (+13 more)
(+52 files in other folders)
