[tool.poetry]
name = "companiongenerator"
version = "0.1.0"
description = "Tool for automating generation and editing of mod files"
authors = ["Butterscotch Stallion"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
typer = "^0.9.0"
flake8-logging-format = "^0.9.0"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

